--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -26,6 +26,43 @@
         "projects": "🚀 Explore My Projects",
         "contact": "📩 Let’s Work Together"
       }
+    },
+    "about": {
+      "profileCard": {
+        "fullName": "Yassine CHMAREKH",
+        "job": "Full Stack Developer",
+        "user": "yassine_chm",
+        "status": "Online",
+        "contact": "Contact Me"
+      },
+      "text": {
+        "title": "Hello, I'm Yassine.",
+        "parag": [
+          "Experienced self-taught developer with over <bold>5+ years</bold> of crafting advanced SaaS products and B2B solutions, specializing in transforming imaginative designs into robust, scalable web solutions that set new standards.",
+          "I love building tools that are <bold>user friendly, simple</bold> and <bold>delightful</bold>.",
+          "Through these experiences, I had the opportunity to work with both small and large companies, as well as specialized and cross-functional teams across different time zones & developed a working style that prioritizes <bold>flexibility, clarity</bold> and <bold>collaboration</bold>.",
+          "I'm currently looking for a new role as a developer. <link>Hire me?</link>"
+        ]
+      },
+      "cards": [
+        {
+          "title": "💼 3+ Years",
+          "description": "Experience"
+        },
+        {
+          "title": "🧠 Full Stack",
+          "description": "React, Node.js, Next.js"
+        },
+        {
+          "title": "🌍 Based in",
+          "description": "Morocco"
+        },
+        {
+          "title": "🎯 Passion For",
+          "description": "Creative & Scalable Apps"
+        }
+      ],
+      "button": "Discover More"
     }
   }
 }
