--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -34,16 +34,16 @@
       "text": {
         "title": "Hello, I'm Yassine.",
         "parag": [
-          "Experienced self-taught developer with over <bold>5+ years</bold> of crafting advanced SaaS products and B2B solutions, specializing in transforming imaginative designs into robust, scalable web solutions that set new standards.",
-          "I love building tools that are <bold>user friendly, simple</bold> and <bold>delightful</bold>.",
-          "Through these experiences, I had the opportunity to work with both small and large companies, as well as specialized and cross-functional teams across different time zones & developed a working style that prioritizes <bold>flexibility, clarity</bold> and <bold>collaboration</bold>.",
+          "Self-taught developer passionate about building web applications and learning new technologies every day.",
+          "I love creating tools that are <bold>user-friendly, simple</bold>, and <bold>delightful</bold>.",
+          "I enjoy working on personal projects, experimenting with new frameworks, and improving my skills in <bold>React, Node.js,</bold> and <bold>Next.js</bold>.",
           "I'm currently looking for a new role as a developer. <link href=\"mailto:yassinechmarekh88@gmail.com\">Hire me?</link>"
         ]
       },
       "cards": [
         {
-          "title": "💼 3+ Years",
-          "description": "Experience"
+          "title": "💡 Self-Taught",
+          "description": "Eager Learner"
         },
         {
           "title": "🧠 Full Stack",
@@ -92,14 +92,14 @@
       "items": [
         {
           "location": "Settat - Hassan 1st University",
-          "title": "Faculty of Sciences and Techniques of Settat (FSTS)",
-          "subTitle": "Bachelor’s Degree in Computer Engineering (Sciences and Techniques)",
+          "title": "Faculty of Science and Technology Settat (FSTS)",
+          "subTitle": "Bachelor of Science and Technology in Computer Engineering",
           "startDate": "September 2023",
           "endDate": "September 2024"
         },
         {
           "location": "Settat - Hassan 1st University",
-          "title": "Faculty of Sciences and Techniques of Settat (FSTS)",
+          "title": "Faculty of Science and Technology Settat (FSTS)",
           "subTitle": "University Diploma in Science and Technology (DEUST)",
           "startDate": "September 2020",
           "endDate": "September 2023"
@@ -107,7 +107,7 @@
         {
           "location": "Casablanca - Hay Hassani",
           "title": "Badr High School",
-          "subTitle": "Baccalaureate in Physics and Chemistry",
+          "subTitle": "Bachelor's degree in physics and chemistry French option",
           "startDate": "September 2019",
           "endDate": "September 2020"
         }
@@ -123,10 +123,10 @@
           "startDate": "July 2024",
           "endDate": "November 2024",
           "details": [
-            "Developed a complete e-commerce website, including product management, user authentication, and secure payment integration.",
-            "Designed a responsive and modern user interface ensuring smooth navigation and a high-quality user experience.",
-            "Implemented a Laravel-based backend and optimized database queries for better performance.",
-            "Collaborated with the client to define requirements, propose features, and deliver the final product on schedule."
+            "Developed a fully functional e-commerce website featuring product management, user authentication, and order processing with coupon management.",
+            "Designed a modern, responsive user interface to ensure smooth navigation and an engaging user experience.",
+            "Built a Laravel-based backend with an intuitive admin dashboard for managing products, categories, and orders.",
+            "Worked closely with the client to define requirements, suggest improvements, and deliver the final product on time."
           ]
         },
         {
@@ -137,9 +137,9 @@
           "endDate": "July 2024",
           "details": [
             "Developed a web application as part of the final academic project, using Laravel and modern front-end technologies.",
-            "Integrated APIs and optimized database structures for efficient data handling.",
-            "Contributed to both front-end and back-end development, ensuring functionality and scalability.",
-            "Documented the project and presented it successfully to the academic jury."
+            "Built a complete e-commerce platform featuring product, category, and order management modules.",
+            "Developed a multi-role system with three dashboards: admin, employee, and client, each with distinct features and permissions.",
+            "Documented the project and successfully presented it to the academic jury."
           ]
         }
       ]
@@ -151,9 +151,9 @@
       "tools": "Tools & Others"
     },
     "cta": {
-      "title": "Let’s Build Something Amazing Together",
-      "description": "I’m always open to new projects, collaborations, or just a friendly chat about code.",
-      "button": "📩 Contact Me"
+      "title": "Want to Work With a Passionate Developer?",
+      "description": "Let’s connect and turn your ideas into beautiful, functional digital experiences.",
+      "button": "🚀 Let’s Collaborate"
     }
   },
   "projects": {
@@ -162,17 +162,33 @@
     "items": {
       "titles": {
         "selfiecadeau": "Selfie Cadeau — Personalized Gift E-commerce",
-        "sydigital": "SyDigital — Creative Digital Agency",
+        "sydigital": "SyDigital — Modern Web Development Agency",
         "blogify": "Blogify — Smart Blogging Platform",
         "apprentis": "Apprentis Center — Language Learning Platform",
-        "msmvoyages": "MSM Voyages — Travel Agency Website"
+        "msmvoyages": "MSM Voyages — Travel Agency Website",
+        "rayshooting": "Ray Shooting — Photography Studio Website",
+        "wac": "Wydad Athletic Club — Football Club Website",
+        "fastexpress": "Fast Express — Delivery Agency Landing Page",
+        "budgetwindowcleanning": "Budget Window Cleaning — Window Cleaning Service Landing Page",
+        "topico": "Topico — Frontend E-commerce Project",
+        "bestportlandcleaners": "Best Portland Cleaners — Cleaning Service Website",
+        "mtinformatique": "MT Informatique — Computer Hardware E-commerce",
+        "wordsearchgenerator": "Word Search Generator — AI-powered Puzzle Tool"
       },
       "descriptions": {
-        "selfiecadeau": "An online store that allows users to customize affordable gifts with photos, text, and designs. Features include product management, coupon system, and automated email notifications.",
-        "sydigital": "A modern digital agency website showcasing services in web design, SEO, and branding, with a sleek interface and responsive design.",
+        "selfiecadeau": "An online store that allows users to customize affordable gifts by adding their own text. Features include product management, coupon system, and automated email notifications.",
+        "sydigital": "A sleek and responsive website for a web development brand. Features an animated modern design with support for both dark and light modes.",
         "blogify": "A blogging platform that enables users to create, manage, and share blog posts easily, including admin management, image uploads, and tag systems.",
-        "apprentis": "A language tutoring center website offering information on courses, teachers, and registration with multilingual support and a clean design.",
-        "msmvoyages": "A travel agency website designed to present destinations, packages, and online inquiries with a focus on simplicity and elegance."
+        "apprentis": "A landing page for a language training center, featuring a modern design and a registration form that sends user details to the administration to complete the enrollment process.",
+        "msmvoyages": "A professional website for a travel agency showcasing its services and travel destinations. Includes a booking form that sends reservation details to the admin via email to complete the process.",
+        "rayshooting": "A modern and animated website for a photography studio showcasing its services. Includes a booking form that sends reservation details to the admin via email.",
+        "wac": "A demo website presenting information about the Wydad Athletic Club, featuring a design that reflects the club’s visual identity and spirit.",
+        "fastexpress": "A landing page for a delivery agency showcasing its services with a clean and responsive design.",
+        "budgetwindowcleanning": "A landing page for a window cleaning agency, presenting its services with a clean and responsive design.",
+        "topico": "A frontend e-commerce website showcasing products with a modern and responsive design.",
+        "bestportlandcleaners": "A modern and animated website for a cleaning agency, featuring a responsive design to showcase its services.",
+        "mtinformatique": "An e-commerce website for computer hardware with three user roles: admin, employees, and clients. Each role has its own dashboard and specific functionalities.",
+        "wordsearchgenerator": "A tool that allows users to choose a niche, fetches word searches via an AI API, and generates a PDF in the form of a word search book."
       },
       "previewButton": "Live Preview",
       "githubButton": "Github Repository"
@@ -184,24 +200,32 @@
     },
     "noResult": "No projects found. Try adjusting your search or filters!",
     "cta": {
-      "title": "Let’s Build Something Amazing Together",
-      "description": "I’m always open to new projects, collaborations, or just a friendly chat about code.",
-      "button": "📩 Contact Me"
+      "title": "Have a Project in Mind?",
+      "description": "Let’s discuss how I can help you bring your vision to life with clean design and efficient code.",
+      "button": "💡 Start Your Project"
     }
   },
   "certificates": {
     "title": "My Certificates",
     "description": "Explore my professional certifications by category.",
     "items": {
-      "react": "Learn React Cource"
+      "react": "Learn React Cource",
+      "typescript": "Learn TypeScript Cource",
+      "advancedreact": "Learn Advanced React Course",
+      "express": "Learn Express Course",
+      "gitgithub": "Learn Git & GitHub Course",
+      "mongodb": "Learn MongoDB Course",
+      "reactredux": "Create an Advanced Web App with React and Redux Skill Path",
+      "redux": "Learn Redux: Redux Toolkit Course",
+      "expressskills": "Securing Express Applications Skill Path"
     },
     "all": "All",
     "tools": "Tools",
     "noResult": "No certificates found in this category.",
     "cta": {
-      "title": "Let’s Build Something Amazing Together",
-      "description": "I’m always open to new projects, collaborations, or just a friendly chat about code.",
-      "button": "📩 Contact Me"
+      "title": "Learning Never Stops",
+      "description": "I’m constantly improving my skills to deliver the best possible results. Let’s grow together.",
+      "button": "🌱 Let’s Connect"
     }
   }
 }
